# advent-of-code

./: .env  .envrc  .gitignore  .gitpod.yml  .pre-commit-config.yaml  2021.js  Cargo.toml  Dockerfile  README.md  aoc-2021.ods  buildspec.yml  shell.nix  test bi-directional sync  test this
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  promote.yaml
aoc-2019/: Cargo.toml
aoc-2019/src/: day_02.rs  day_1.rs  day_10.rs  day_12.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_3.rs  intcode.rs  lib.rs
aoc-2020/: Cargo.toml
aoc-2020/src/: day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_1.rs  day_10.rs  day_11.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc-2021/: Cargo.toml
aoc-2021/src/: day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  lib.rs
aoc-2025/: Cargo.toml
aoc-2025/src/: day_04.rs  day_06.rs  day_07.rs  day_07.ts  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  lib.rs
aoc-common/: Cargo.toml
aoc-common/src/: aoc_day.rs  bitset.rs  files.rs  geometry.rs  lib.rs  search.rs  time.rs
benches/: bench_2020.rs
football-puzzle/: Cargo.toml
football-puzzle/src/: lib.rs
src/: aoc_2019.rs  aoc_2020.rs  common.rs  day_1.rs  day_3.rs  files.rs  intcode.rs  lib.rs  main.rs
src/aoc_2019/: day_02.rs  day_1.rs  day_10.rs  day_12.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_3.rs  intcode.rs
src/aoc_2020/: day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
src/common/: bitset.rs  geometry.rs  search.rs  time.rs
