[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Gordon Govan <gordon@ggovan.uk>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
text_io = "0.1.8"
itertools = "0.9.0"
num = "0.3.1"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench_2020"
harness = false
