[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Gordon Govan <gordon@ggovan.uk>"]
edition = "2018"

[dependencies]
aoc-2019 = { path = "./aoc-2019" }
aoc-2020 = { path = "./aoc-2020" }
aoc-2021 = { path = "./aoc-2021" }
aoc-2025 = { path = "./aoc-2025" }
aoc-common = { path = "./aoc-common" }
football-puzzle = { path = "./football-puzzle" }

tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench_2020"
harness = false

[workspace]
members = [
    "aoc-common",
    "aoc-2019",
    "aoc-2020",
    "aoc-2021",
    "aoc-2025",
]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

