[package]
name = "aoc-2025"
version = "0.1.0"
authors = ["Gordon Govan <gordon@ggovan.uk>"]
edition = "2024"

[dependencies]
aoc-common = { path = "../aoc-common" }

hashbrown = "0.16.1"
tinyvec = "1.10.0"
itertools = "0.14.0"
lazy_static = "1.4.0"
regex = "1.4.2"
tokio = { version = "1", features = ["full"] }
